<resources>
    <string name="app_name">Anime Player</string>
    <string name="menu_clearHistory">Clear history</string>
    <string name="title_activity_main">Anime Player</string>
    <string name="menu_favorites">Favorites</string>
	<string name="menu_about">About</string>
	<string name="menu_refresh">Refresh</string>
	<string name="menu_goToLastWatched">Go to last watched</string>
	<string name="downloading_data">Retrieving data...</string>
	<string name="no_results_found">No results found!</string>
	<string name="enter_epizode_name">Enter epizode name</string>
	<string name="enter_anime_name">Enter anime name</string>
	<string name="about">About</string>
	<string name="about_back">Ok, let me watch now</string>
	<string name="history">HISTORY</string>
	<string name="all">ALL</string>
	<string name="favorites">FAVORITES</string>
	<string name="done">Action performed!</string>
	<string name="select_items">Select items</string>
	<string name="history_subtitile">Use right buttons to perform action.</string>
	<string name="select_type">Select page</string>
	<string name="clear_history">Are you sure you want to clear history?</string>
	<string name="video_jumper">Video jumper</string>
	<string name="jump">Jump</string>
	<string name="close">Close</string>
	<string name="alphabetical">Alphabetical</string>
	<string name="sort">Sort</string>
	<string name="rating">Rating</string>
	<string name="next">Next</string>
</resources>